# bibliograph

./: .gitattributes  .gitignore  README.md  download-minio.ps1  fix-docker-complete.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
infrastructure/docker/: docker-compose.dev.yml
infrastructure/docker/monitoring/: alert_rules.yml  blackbox.yml  prometheus.yml  promtail-config.yml
services/auth-service/: .dockerignore  README.md  go.mod  go.sum
services/auth-service/New folder/: .env.example  Dockerfile
services/auth-service/cmd/: main.go
services/auth-service/config/: config.go
services/auth-service/docker/: Makefile  docker-compose.yml
services/scraper-service/: Dockerfile  README.md  docker-compose.scraper.debug.yml  docker-compose.scraper.yml  pyproject.toml  requirements.txt
services/scraper-service/scripts/author_linking_job/: README.md  requirements.txt  run_job_latin.py  run_job_persian.py
services/scraper-service/scripts/copy_collections/: README.md  copy_collection.py
services/scraper-service/scripts/data_profiling/: README.md  run.py
services/scraper-service/scripts/data_profiling/analyzers/: __init__.py  quality_scorer.py
services/scraper-service/scripts/data_profiling/profilers/: __init__.py  mongodb_profiler.py  relationship_checker.py  schema_validator.py
services/scraper-service/scripts/data_profiling/utils/: __init__.py  stats_tracker.py
services/scraper-service/src/api/: dependencies.py  main.py
services/scraper-service/src/api/routes/: __init__.py  books.py  health.py  scraper.py
services/scraper-service/src/config/: logging_config.py  settings.py
services/scraper-service/src/core/database/: __init__.py  elasticsearch.py  minio_client.py  mongodb.py  postgres.py  redis_client.py
services/scraper-service/src/models/: base.py  book.py  scraping_log.py
services/scraper-service/src/repositories/: __init__.py  author_repo.py  book_repo.py  scraping_log_repo.py
services/scraper-service/src/schemas/: __init__.py  book.py  scraper.py
services/scraper-service/src/scrapers/sources/: nlai.py
services/scraper-service/src/tasks/: celery_app.py  scraping_tasks.py
(+35 files in other folders)
