[tool.poetry]
name = "bibliograph-scraper"
version = "0.1.0"
description = "BiblioGraph AI - Web Scraping & Data Collection Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Scraping
scrapy = "^2.11.0"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
selenium = "^4.16.0"
selenium-wire = "^5.1.0"

# HTTP Clients
httpx = "^0.25.0"
aiohttp = "^3.9.0"
requests = "^2.31.0"

# Data Processing
pandas = "^2.1.0"
numpy = "^1.26.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Persian NLP
hazm = "^0.9.0"

# Dates
python-dateutil = "^2.8.0"
jdatetime = "^4.1.0"

# Database & ORM
prisma = "^0.11.0"
pymongo = "^4.6.0"
redis = "^5.0.0"
elasticsearch = "^8.11.0"

# Task Queue
celery = "^5.3.0"
flower = "^2.0.0"

# API Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

# Monitoring & Logging
structlog = "^24.1.0"
sentry-sdk = "^1.39.0"
prometheus-client = {extras = ["multiprocess"], version = "^0.23.1"}

# Utilities
fake-useragent = "^1.4.0"
tenacity = "^8.2.0"
python-dotenv = "^1.0.0"
minio = "^7.2.18"
motor = "^3.7.1"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.96.0"
faker = "^22.0.0"
vcrpy = "^5.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"
